# gmail-agent

./: .gitignore  README.md  app.py  docker-compose.yml
backend/: .gitignore  app.py  config.py
backend/api/: __init__.py  gmail_api.py  model.py  user_ops.py
backend/logger/: logger.py
gmail/: gmail_api.py  main.py  pyproject.toml  pytest.ini  script.py
gmail-client/: client.py  gmail_credentials.py  mcpclient.py  pyproject.toml
gmail/app/: gmail_api.py  main.py  model.py  tools.py
gmail/tests/: conftest.py  test_gmail_api.py  test_integration.py  test_main.py
gmail/tests/fixtures/: mock_batch_response.json  mock_threads_response.json
init/: schema.sql
postmaster-extension/: manifest.json
postmaster-extension/my-react-app/: package-lock.json  package.json
postmaster-extension/my-react-app/src/: App.tsx  firebase.ts  index.css
postmaster-extension/my-react-app/src/components/: Auth.css  Dashboard.css  Dashboard.tsx  Login.tsx  PrivateRoute.tsx  Signup.tsx
postmaster-extension/my-react-app/src/contexts/: AuthContext.tsx
